# demo_selenium

./: .env.github  .env.local  Dockerfile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  pytest.ini  scraping.py
.github/workflows/: pytest.yml
api/: urls.py  views.py
api/views/: __init__.py  constructor_standing.py  driver_standing.py  race_result.py  sync.py
app/: apps.py  urls.py
app/views/: __init__.py  constructor_standing.py  driver_standing.py  index.py  race_result.py
common/: admin.py
common/migrations/: 0001_initial.py
common/models/: drivers.py  races.py  teams.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  test.py
core/: admin.py  serializers.py
core/filters/: __init__.py  constructor_standing.py  driver_standing.py  race_reslut.py
core/forms/: __init__.py  constructor_standing.py  driver_standing.py  race_reslut.py
core/migrations/: 0001_initial.py  0002_rename_time_raceresultmodel_race_time_and_more.py  0003_alter_raceresultmodel_unique_together.py  0004_alter_raceresultmodel_unique_together_and_more.py  0005_alter_constructorstandingmodel_points_and_more.py
core/models/: __init__.py  constructor_standing.py  driver_standing.py  race_reslut.py
core/serializers/: __init__.py  constructor_standing.py  driver_standing.py  race_reslut.py
core/tasks/: sync.py
dockerfiles/app/: Dockerfile
dockerfiles/db/: Dockerfile
dockerfiles/pgadmin4/: servers.json
myapp/: admin.py
myapp/migrations/: 0001_initial.py
mysite/: settings.py
requirements/: base.txt  local.txt
tests/: conftest.py
(+19 files in other folders)
