[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.9"
djangorestframework = "3.15.2"
django-environ = "0.9.0"
django-filter = "24.3"
python-dotenv = "0.21.0"
psycopg = "3.2.1"
selenium = "4.23.1"
django-debug-toolbar = "4.4.6"
pytest-cov = "5.0.0"
pytest-django = "4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
